fixed red gradient not showing on active

--- a/src/source.scss
+++ b/src/source.scss
@@ -26,7 +26,7 @@ $white-gradient: 315deg, rgba(255,255,255,0.2) 0%, rgba(255,255,255,0) 74%;
     &.colorDanger-2qLCe1 {
         &.focused-3afm-j, &:active {
             color: #fff;
-            background: linear-gradient($red-gradient);
+            background: linear-gradient($red-gradient) !important;
         }
     }
 }
